# phone-call-assistant

./: .env.example  .env.example.env  .gitignore  azure-pipelines.yml  config.py  main.py  pyproject.toml  requirements.txt
routes/: incoming_call.py  media_stream.py  outbound_call.py  outcoming_call.py
rtclient/: __init__.py  client_test.py  defaults.py  low_level_client.py  models.py
rtclient/util/: id_generator_test.py  message_queue_test.py  model_helpers_test.py  user_agent.py  user_agent_test.py
services/: azure_openai_ws.py  cosmosdb_service.py  media_stream.py  openai_ws.py  scheduler.py
utils/: azure_auth_utils.py  azure_openai_utils.py  media_stream_utils.py  openai_utils.py  twilio_auth_utils.py
